# ros2_ws

./: .gitignore  README.md  commands.md
src/camera_node/: package.xml  setup.py
src/camera_node/camera_node/: camera_node.py  main.py
src/display_node/: package.xml  setup.cfg  setup.py
src/display_node/display_node/: display_node.py  main.py
src/mytest/: package.xml  setup.cfg  setup.py
src/mytest/launch/: hello_launch.py  hello_launch.xml  robot_launch.py
src/mytest/mytest/: audio.py  nav2_action_send.py  robot_sub.py  trial_pub.py  trial_sub.py  voice.py
src/nav2_tauri/: index.html  package-lock.json  package.json
src/nav2_tauri/src/: App.module.scss  App.tsx  goalPoints.d.ts  main.tsx  styles.css
src/nav2_tauri/src-tauri/: CMakeLists.txt  Cargo.toml  package.xml  tauri.conf.json
src/nav2_tauri/src-tauri/src/: main.rs
src/nav2_test/: package.xml  setup.py
src/nav2_test/launch/: nav_launch.py
src/nav2_test/nav2_test/: key_input_pub.py  point_pub.py  send_action_sub.py
src/r2r_minimal_action_node/: README.md
src/r2r_minimal_action_node/r2r_minimal_action_client/: CMakeLists.txt  Cargo.toml  package.xml
src/r2r_minimal_action_node/r2r_minimal_action_server/: CMakeLists.txt  Cargo.toml
src/r2r_test/: .gitignore
src/r2r_test/r2r_action/: CMakeLists.txt  Cargo.toml  package.xml
src/r2r_test/r2r_minimal_action_server/: package.xml
src/r2r_test/r2r_minimal_action_server/src/: main.rs
src/r2r_test/r2r_pub/: CMakeLists.txt  Cargo.toml  package.xml
src/r2r_test/r2r_sub/: CMakeLists.txt  Cargo.toml  package.xml
(+5 files in other folders)
