<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>r2r_minimal_action_server</name>
  <version>0.0.1</version>
  <description>Examples of a minimal r2r node</description>
  <maintainer email="takumi1988okamoto@gmail.com">Takumi Okamoto</maintainer>
  <license>MIT</license>
  <author>Takumi Okamoto</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>example_interfaces</build_depend>

  <exec_depend>rcl</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>example_interfaces</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
